--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -201,8 +201,9 @@ h4{
 }
 
  #map {
-            height: 60vh;
-            width: 100%;
+            height: 40vh;
+            width: 50%;
+            display: inline-block;
       }
 
 
