--- a/ImpactMap/Views/Categories/Index.cshtml
+++ b/ImpactMap/Views/Categories/Index.cshtml
@@ -4,49 +4,53 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="container">
 
-<p>
-    @Html.ActionLink("Create New", "Create", "Categories", new { @class = "button" })
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.metrics)
-            
-        </th>
-    </tr>
+    <h2>Index</h2>
 
-@foreach (var item in Model) {
-   <tr>
-        <td>
-            @item.name
-        </td>
-       <td>
-          
-            @if (item.metrics.Count != 0)
-            {
+    <p>
+        @Html.ActionLink("Create New", "Create", "Categories", new { @class = "button" })
+    </p>
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.metrics)
 
-                foreach (var metric in item.metrics)
-                {
-                    <span class="metricName">@metric.name</span>
-                }
-            }
-            else
-            {
-              <span>No Metrics Available</span>
-            }
-        </td>
-   
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
+            </th>
+        </tr>
 
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.name
+                </td>
+                <td>
+
+                    @if (item.metrics.Count != 0)
+                    {
+
+                        foreach (var metric in item.metrics)
+                        {
+                            <span class="metricName">@metric.name</span>
+                        }
+                    }
+                    else
+                    {
+                        <span>No Metrics Available</span>
+                    }
+                </td>
+
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+            </tr>
+        }
+
+    </table>
+    </div>
