--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -3,62 +3,64 @@
 @{
     ViewBag.Title = "Index";
 }
-<span style="vertical-align: top;">
 
-    <span class="spaceDivs dbSpans">
-        <dt class="dl-horizontal">
+<div class="container">
+    <div style="vertical-align: top;">
 
-            <dd>
-                @Html.DisplayFor(model => model.name)
-            </dd>
+        <div class="spaceDivs dbSpans">
+            <dt class="dl-horizontal">
 
-            <dd>
-                @Html.DisplayFor(model => model.address1)
-            </dd>
+                <dd>
+                    <span class="orgName">@Html.DisplayFor(model => model.name)</span>
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.address2)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.address1)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.city), @Html.DisplayFor(model => model.state)   @Html.DisplayFor(model => model.zip)
-            </dd>
-            <br />
-            <dd>
-                @Html.DisplayFor(model => model.description)
-            </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.address2)
+                </dd>
 
-            @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
-    </span>
-    <div id="map"></div>
-</span>
+                <dd>
+                    @Html.DisplayFor(model => model.city), @Html.DisplayFor(model => model.state)   @Html.DisplayFor(model => model.zip)
+                </dd>
+                <br />
+                <dd>
+                    @Html.DisplayFor(model => model.description)
+                </dd>
+
+                @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
+        </div>
+        <div id="map" class="dashMap"></div>
+    </div>
     @*<span class="spaceDivs dbSpans">
-        <h2>My Investment Tags</h2>
-        <div>
-            <table class="table">
-                @foreach (var investment in Model.investmentsOut)
-                {
-                    foreach (var category in investment.categories)
+            <h2>My Investment Tags</h2>
+            <div>
+                <table class="table">
+                    @foreach (var investment in Model.investmentsOut)
                     {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => category.name)
-                            </td>
-                            <td>
+                        foreach (var category in investment.categories)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => category.name)
+                                </td>
+                                <td>
 
-                            </td>
-                        </tr>
+                                </td>
+                            </tr>
 
+                        }
                     }
-                }
-            </table>
-        </div>
+                </table>
+            </div>
 
-        <div class="addpadding">
-            
-            @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
-        </div>
-    </span>*@
+            <div class="addpadding">
+
+                @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
+            </div>
+        </span>*@
 
     @*<span class="spaceDivs dbSpans">
         @if ( user.ID has new reports/ report requests)
@@ -84,39 +86,39 @@
 
 
 
-<div class="spaceDivs">
-    <h2>Investments Sent</h2>
-    <div class="addpadding">
+    <div class="spaceDivs">
+        <h2>Investments Sent</h2>
+        <div class="addpadding">
 
-        @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
+            @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
 
-        @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "button" })
+            @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "button" })
 
-        @Html.ActionLink("View Investment Tags", "Index", "Categories", "Categories", new { @class = "button" })
+            @Html.ActionLink("View Investment Tags", "Index", "Categories", "Categories", new { @class = "button" })
 
-        @if (Model.investmentsOut.Count != 0)
-        {
-            <table class="table">
-                <tr>
-                    <th>
-                        Investment Date
-                    </th>
-                    <th>
-                        Value
-                    </th>
-                    <th>
-                        Recipient
-                    </th>
-                    <th>
-                        Reports
-                    </th>
-                </tr>
+            @if (Model.investmentsOut.Count != 0)
+            {
+                <table class="table">
+                    <tr>
+                        <th>
+                            Investment Date
+                        </th>
+                        <th>
+                            Value
+                        </th>
+                        <th>
+                            Recipient
+                        </th>
+                        <th>
+                            Reports
+                        </th>
+                    </tr>
 
-                @*Displays each investment in the table*@
-                @foreach (var item in Model.investmentsOut.Take(5))
+                    @*Displays each investment in the table*@
+                    @foreach (var item in Model.investmentsOut.Take(5))
                 {
 
-                    <tr>
+                        <tr>
                             <td>
                                 @item.date.ToShortDateString()
                             </td>
@@ -130,88 +132,90 @@
                                 @if (item.projectTo.report != null)
                                 {
                                     string reportID = Convert.ToString(item.projectTo.report.ID);
-                                        @Html.ActionLink("Report", reportID, "Details", "Report")
+                                    @Html.ActionLink("Report", reportID, "Details", "Report")
                                 }
                                 else
                                 {
-                                        <span>No report available.</span>
+                                    <span>No report available.</span>
                                 }
                             </td>
-                    </tr>
+                        </tr>
 
-                }
+                    }
 
 
-            </table>
-        }
-        else
-        {
-                                        <p>You Currently Have No Investments</p>
-        }
+                </table>
+            }
+            else
+            {
+                <p>You Currently Have No Investments</p>
+            }
 
+        </div>
     </div>
-</div>
-<div class="spaceDivs">
-    <h2>My Projects</h2>
-    <div class="addpadding">
-        @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
 
-        @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
+    <div class="spaceDivs">
+        <h2>My Projects</h2>
+        <div class="addpadding">
+            @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
 
-        @if (Model.projects.Count != 0)
-        {
-            <table class="table">
-                <tr>
-                    <th>
-                        Project Name
-                    </th>
-                    <th>
-                        
-                    </th>
-                </tr>
-                @if (Model.investmentsOut != null)
+            @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
+
+            @if (Model.projects.Count != 0)
+            {
+                <table class="table">
+                    <tr>
+                        <th>
+                            Project Name
+                        </th>
+                        <th>
+
+                        </th>
+                    </tr>
+                    @if (Model.investmentsOut != null)
                 {
                     foreach (var item in Model.projects.Take(5))
                     {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.name)
-                            </td>
-                            <td>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.name)
+                                </td>
+                                <td>
 
-                                @foreach (var thing in item.investmentsIn)
-                                {
-                                    <p>$@Html.DisplayFor(modelItem => thing.amount)</p><br />
-                                }
-                            </td>
-                            <td>
-                                @foreach (var thing in item.investmentsIn)
-                                {
-                                    @thing.date.ToShortDateString()<br />
-                                }
-                            </td>
-                            <td>
-                                @foreach (var thing in item.investmentsIn)
-                                {
-                                    @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
-                                }
-                            </td>
-                            <td>
-                                @if (item.report != null)
-                                {
-                                    string reportID = Convert.ToString(item.report.ID);
-                                }
-                                
-                            </td>
-                        </tr>   
+                                    @foreach (var thing in item.investmentsIn)
+                                    {
+                                        <p>$@Html.DisplayFor(modelItem => thing.amount)</p><br />
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var thing in item.investmentsIn)
+                                    {
+                                        @thing.date.ToShortDateString()<br />
+                                    }
+                                </td>
+                                <td>
+                                    @foreach (var thing in item.investmentsIn)
+                                    {
+                                        @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
+                                    }
+                                </td>
+                                <td>
+                                    @if (item.report != null)
+                                    {
+                                        string reportID = Convert.ToString(item.report.ID);
+                                    }
+
+                                </td>
+                            </tr>
+                        }
                     }
-                }
-            </table>
-        }
-        else
-        {
-                    <p>You currently have no projects.</p>
-        }
+                </table>
+            }
+            else
+            {
+                <p>You currently have no projects.</p>
+            }
+        </div>
     </div>
 </div>
 
