--- a/ImpactMap/Views/Investments/Create.cshtml
+++ b/ImpactMap/Views/Investments/Create.cshtml
@@ -71,7 +71,11 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Investment.categories, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    <div id="CatList"></div>
+                    <div id="CatList">
+                        <ul>
+
+                        </ul>
+                    </div>
                     <input name="categories" id="categories" type="hidden" />
                 </div>
             </div>
@@ -130,12 +134,12 @@
                 url: '/public/categories',
                 type: 'GET',
                 success: function (data) {
-                    $('#CatList').html('<ul>');
+                    //$('#CatList').html('<ul>');
                     data.map(function (category) {
-                        $('#CatList').append('<li id="cat' + category.ID + '" data-id=' + category.ID + '><span id="catspan' + category.ID + '" class="fa fa-square-o"></span> ' + category.name + '</li>');
+                        $('#CatList ul').append('<li id="cat' + category.ID + '" data-id=' + category.ID + '><span id="catspan' + category.ID + '" class="fa fa-square-o"></span> ' + category.name + '</li>');
                         $('#cat' + category.ID).click(function () { toggle_category(category.ID); });
                     });
-                    $('#CatList').append('</ul>');
+                    //$('#CatList').append('</ul>');
                 }
             })
         }
