--- a/ImpactMap/Views/Reports/Details.cshtml
+++ b/ImpactMap/Views/Reports/Details.cshtml
@@ -11,14 +11,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.project_ID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.project_ID)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.completed)
         </dt>
 
@@ -45,6 +37,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) 
     @Html.ActionLink("Back to List", "Index")
 </p>
